cmake_minimum_required(VERSION 3.0)
project(Chapter_5)

set(CMAKE_CXX_STANDARD 11)

add_executable(Package Package.cpp)
add_executable(Package2 Package2.cpp)
add_executable(Duo Duo.cpp)
add_executable(Duo2 Duo2.cpp)
add_executable(Couple Couple.cpp)
add_executable(DP2_acwing898 DP2_acwing898.cpp)
add_executable(acwing897 acwing897.cpp)

